# TGVideoCompress

./: README.md  README_en.md  settings.gradle.kts
TGVideoCompress/: build.gradle.kts
TGVideoCompress/jni/: CMakeLists.txt  test.cpp
TGVideoCompress/src/androidTest/java/com/viifo/tgvideocompress/: ExampleInstrumentedTest.kt
TGVideoCompress/src/main/java/com/viifo/tgvideocompress/: ApplicationLoader.java  AudioBufferConverter.java  AudioConversions.java  AudioDecoder.java  AudioRecoder.java  FilterShaders.java  InputSurface.java  MP4Builder.java  MediaCodecVideoConvertor.java  MediaController.java  Mp4Movie.java  OnProgressListener.java  OutputSurface.java  Sample.java  SharedConfig.java  TextureRenderer.java  Track.java  VideoEditedInfo.java
TGVideoCompress/src/main/java/com/viifo/tgvideocompress/audio_input/: AudioInput.java  BlankAudioInput.java  GeneralAudioInput.java
TGVideoCompress/src/main/java/com/viifo/tgvideocompress/remix/: AudioRemixer.java  DefaultAudioRemixer.java  DownMixAudioRemixer.java  PassThroughAudioRemixer.java  SurroundAudioRemixer.java  (+1 more)
TGVideoCompress/src/test/java/com/viifo/tgvideocompress/: ExampleUnitTest.kt
demo/: build.gradle.kts
demo/src/androidTest/java/com/viifo/videocompress/: ExampleInstrumentedTest.kt
demo/src/main/: AndroidManifest.xml
demo/src/main/res/layout/: activity_main.xml
demo/src/main/res/values/: strings.xml  themes.xml
demo/src/main/res/values-night/: themes.xml
demo/src/test/java/com/viifo/videocompress/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+9 files in other folders)
